# Ukrainability-Telegram-Bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_UPDATES.md  LICENSE  README.md  REVIEW_FIXES.md  export_responses.py  pryroda_kremenchuk.py  pyproject.toml
.github/workflows/: ci.yml
src/ukrainability_telegram_bot/: __init__.py  _legacy.py  app.py  bot.py  cleanup.py  cli.py  config.py  constants.py  export.py  handlers.py  keyboards.py  messages.py  nickname_db.py  nicknames.py  pseudonym.py  runtime.py  security.py  sessions.py  startup.py  state.py  storage.py  telegram_io.py  voice.py
src/ukrainability_telegram_bot/survey/: actions.py  flow.py  legacy_flow.py  persistence.py  text_router.py
src/ukrainability_telegram_bot/survey/questions/: __init__.py  accessibility.py  base.py  changes_detail.py  confirmation.py  consent.py  demographics.py  description.py  duration.py  enjoyment.py  frequency.py  kremenchuk.py  language.py  location.py  noticed_changes.py  purpose.py  regularity.py  restart.py  visitor_type.py  welcome.py  wishlist.py
tests/: conftest.py  test_bot_compat.py  test_bot_helpers.py  test_cleanup.py  test_cli.py  test_config.py  test_export.py  test_handler_registration.py  test_keyboards.py  test_messages.py  test_nickname_db.py  test_nicknames.py  test_pseudonym.py  test_question_consent.py  test_question_demographics_confirmation_restart.py  test_question_description.py  test_question_experience.py  test_question_followups.py  test_question_modules_extra.py  test_question_purpose.py  test_question_welcome_language_location.py  test_runtime.py  test_security.py  test_sessions.py  test_startup.py  test_state.py  test_storage.py  test_survey_flow.py  test_survey_persistence.py  test_telegram_io.py  test_text_router.py  test_voice.py
