[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ukrainability-telegram-bot"
version = "0.1.0"
description = "Telegram bot for the Ukrainability outdoor experience survey."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Oleksandr Karasov", email = "oleksa.karasov@gmail.com" },
    { name = "Henrikki Tenkanen", email = "henrikki.tenkanen@aalto.fi" },
]
keywords = ["telegram", "survey", "ukrainability", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyTelegramBotAPI",
    "cryptography",
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "pytest",
    "pytest-cov",
    "ruff==0.6.9",
    "twine",
]

[project.scripts]
ukrainability-bot = "ukrainability_telegram_bot.cli:main"

[project.urls]
Homepage = "https://github.com/AaltoGIS/Ukrainability-Telegram-Bot"
Repository = "https://github.com/AaltoGIS/Ukrainability-Telegram-Bot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src/ukrainability_telegram_bot"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"pryroda_kremenchuk.py" = ["E402"]
"tests/conftest.py" = ["E402"]
"tests/test_security.py" = ["E402"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
